--- a/HDT_AnomalyTrack/StatisticsView.xaml
+++ b/HDT_AnomalyTrack/StatisticsView.xaml
@@ -37,7 +37,7 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Row="0" Grid.RowSpan="9"
+            <Grid Grid.Row="0" Grid.RowSpan="10"
                   Grid.Column="0" Grid.ColumnSpan="3" Panel.ZIndex="100"
                   Background="Black"
                   Visibility="{Binding Opponent, Converter={StaticResource NullToVisibleConverter}}">
@@ -98,7 +98,7 @@
                        Text="{Binding Opponent.Losses, Mode=OneWay, FallbackValue='0'}"/>
 
             <Separator Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="3"
-                       Margin="0,0" IsHitTestVisible="False"/>
+                       Margin="0,0" Height="0.5" IsHitTestVisible="False"/>
 
             <TextBlock Grid.Row="8" Grid.Column="0" 
                        FontSize="14" IsHitTestVisible="False"
