--- a/HDT_AnomalyTrack/StatisticsView.xaml
+++ b/HDT_AnomalyTrack/StatisticsView.xaml
@@ -10,6 +10,18 @@
         <local:ValueToPercentableConverter x:Key="ValueToPercentableConverter"/>
         <local:TimePassedSinceBinaryDate x:Key="TimePassedSinceBinaryDate"/>
         <local:NullToVisibleConverter x:Key="NullToVisibleConverter"/>
+
+        <Style TargetType="Grid" x:Key="RoundGridStyle">
+            <Setter Property="Background" Value="LightGray"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Result}" Value="1">
+                    <Setter Property="Background" Value="LightGreen"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Result}" Value="-1">
+                    <Setter Property="Background" Value="PaleVioletRed"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
     </UserControl.Resources>
 
     <Canvas HorizontalAlignment="Left" VerticalAlignment="Top" 
@@ -30,6 +42,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -37,7 +51,7 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
-            <Grid Grid.Row="0" Grid.RowSpan="10"
+            <Grid Grid.Row="0" Grid.RowSpan="12"
                   Grid.Column="0" Grid.ColumnSpan="3" Panel.ZIndex="100"
                   Background="Black"
                   Visibility="{Binding Opponent, Converter={StaticResource NullToVisibleConverter}}">
@@ -135,6 +149,29 @@
             </TextBlock>
 
             <Separator Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="3"
+                       Margin="0,0" IsHitTestVisible="False"/>
+
+            <ItemsControl Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="3"
+                          ItemsSource="{Binding BattleResults}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Width="25" Height="25"
+                              Style="{StaticResource RoundGridStyle}">
+                            <TextBlock Text="{Binding RoundNumber, Mode=OneWay}"
+                                       Foreground="Black"
+                                       HorizontalAlignment="Center" 
+                                       VerticalAlignment="Center"/>
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+
+            <Separator Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="3"
                        Margin="0,1,0,0" IsHitTestVisible="False"/>
         </Grid>
     </Canvas>
