Added reload button, and logs to investigate events not raised by HDT.

--- a/HDT_BGFightTracker/StatisticsView.xaml
+++ b/HDT_BGFightTracker/StatisticsView.xaml
@@ -53,8 +53,14 @@
                 <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
+            <Button Grid.Row="0" Grid.Column="0"  Grid.ColumnSpan="3"
+                    Panel.ZIndex="1000"
+                    Background="Gray" Width="20" Height="20"
+                    HorizontalAlignment="Right" VerticalAlignment="Top"
+                    Command="{Binding OnButtonPressedCommand}"/>
+
             <Grid Grid.Row="0" Grid.RowSpan="14"
-                  Grid.Column="0" Grid.ColumnSpan="3" Panel.ZIndex="100"
+                  Grid.Column="0" Grid.ColumnSpan="3" Panel.ZIndex="10"
                   Background="Black"
                   Visibility="{Binding Opponent, Converter={StaticResource NullToVisibleConverter}, FallbackValue=Collapsed}">
 
